crates/oxc_css_parser/tests/error/less/mixin/args-after-varadic.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `)`, but found `,`
  ┌─ args-after-varadic.less:1:17
  │
1 │ .mixin(@a, @b..., @c);
  │                 ^


